set body width, fix horiz scroll on ios?

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100svh;
+  width: 100svw;
 }
 
 .container {
